// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Discount renders Discount component with a discount applied 1`] = `
<DocumentFragment>
  <div
    class="SummaryBlock Summary__DiscountForm"
  >
    <div
      class="DiscountForm"
    >
      <div
        class="stx-input stx-input--is-disabled"
      >
        <input
          aria-disabled="true"
          class="stx-input__input-element"
          disabled=""
          placeholder="Enter discount code"
          type="text"
          value="TESTDISCOUNT"
        />
      </div>
      <button
        aria-busy="false"
        aria-disabled="true"
        class="stx-button stx-button--primary stx-button--is-disabled"
        disabled=""
      >
        <span
          class="stx-button__text"
        >
          Apply
        </span>
        <span
          class="stx-loading-spinner stx-button__spinner"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Discount renders Discount component with invalid discount code 1`] = `
<DocumentFragment>
  <div
    class="SummaryBlock Summary__DiscountForm"
  >
    <div
      class="DiscountForm"
    >
      <div
        class="stx-input stx-input--alert"
      >
        <input
          aria-disabled="false"
          class="stx-input__input-element"
          messagetext="Discount code is not valid"
          placeholder="Enter discount code"
          type="text"
          value="TESTDISCOUNT"
        />
      </div>
      <button
        aria-busy="false"
        aria-disabled="false"
        class="stx-button stx-button--primary"
      >
        <span
          class="stx-button__text"
        >
          Apply
        </span>
        <span
          class="stx-loading-spinner stx-button__spinner"
        />
      </button>
    </div>
    <div
      class="DiscountForm__error"
    >
      Discount code is not valid
    </div>
  </div>
</DocumentFragment>
`;

exports[`Discount renders Discount component with no discount applied 1`] = `
<DocumentFragment>
  <div
    class="SummaryBlock Summary__DiscountForm"
  >
    <div
      class="DiscountForm"
    >
      <div
        class="stx-input"
      >
        <input
          aria-disabled="false"
          class="stx-input__input-element"
          placeholder="Enter discount code"
          type="text"
          value=""
        />
      </div>
      <button
        aria-busy="false"
        aria-disabled="true"
        class="stx-button stx-button--is-disabled"
        disabled=""
      >
        <span
          class="stx-button__text"
        >
          Apply
        </span>
        <span
          class="stx-loading-spinner stx-button__spinner"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
